--- a/java-cassandra/pom.xml
+++ b/java-cassandra/pom.xml
@@ -6,7 +6,7 @@
     <name>java-cassandra</name>
 
     <parent>
-        <groupId>com.fenago</groupId>
+        <groupId>com.baeldung</groupId>
         <artifactId>persistence-modules</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
